--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf3e5174",
+   "id": "ea34ad55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-26T14:37:33.537602Z",
-     "iopub.status.busy": "2025-08-26T14:37:33.537269Z",
-     "iopub.status.idle": "2025-08-26T14:37:33.541495Z",
-     "shell.execute_reply": "2025-08-26T14:37:33.540853Z"
+     "iopub.execute_input": "2025-08-26T16:27:59.672101Z",
+     "iopub.status.busy": "2025-08-26T16:27:59.671898Z",
+     "iopub.status.idle": "2025-08-26T16:27:59.675599Z",
+     "shell.execute_reply": "2025-08-26T16:27:59.675080Z"
     },
     "papermill": {
-     "duration": 0.009756,
-     "end_time": "2025-08-26T14:37:33.542728",
+     "duration": 0.008247,
+     "end_time": "2025-08-26T16:27:59.676606",
      "exception": false,
-     "start_time": "2025-08-26T14:37:33.532972",
+     "start_time": "2025-08-26T16:27:59.668359",
      "status": "completed"
     },
     "tags": []
@@ -40,21 +40,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "302d3a3c",
+   "id": "e83666ed",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-08-26T14:37:33.548957Z",
-     "iopub.status.busy": "2025-08-26T14:37:33.548734Z",
-     "iopub.status.idle": "2025-08-26T14:37:33.555834Z",
-     "shell.execute_reply": "2025-08-26T14:37:33.555264Z"
+     "iopub.execute_input": "2025-08-26T16:27:59.681705Z",
+     "iopub.status.busy": "2025-08-26T16:27:59.681496Z",
+     "iopub.status.idle": "2025-08-26T16:27:59.687599Z",
+     "shell.execute_reply": "2025-08-26T16:27:59.687100Z"
     },
     "papermill": {
-     "duration": 0.011723,
-     "end_time": "2025-08-26T14:37:33.557088",
+     "duration": 0.009827,
+     "end_time": "2025-08-26T16:27:59.688582",
      "exception": false,
-     "start_time": "2025-08-26T14:37:33.545365",
+     "start_time": "2025-08-26T16:27:59.678755",
      "status": "completed"
     },
     "tags": []
@@ -283,19 +283,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b9daa091",
+   "id": "69de3c01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-26T14:37:33.563081Z",
-     "iopub.status.busy": "2025-08-26T14:37:33.562876Z",
-     "iopub.status.idle": "2025-08-26T14:37:33.572724Z",
-     "shell.execute_reply": "2025-08-26T14:37:33.572105Z"
+     "iopub.execute_input": "2025-08-26T16:27:59.693560Z",
+     "iopub.status.busy": "2025-08-26T16:27:59.693335Z",
+     "iopub.status.idle": "2025-08-26T16:27:59.702643Z",
+     "shell.execute_reply": "2025-08-26T16:27:59.702152Z"
     },
     "papermill": {
-     "duration": 0.014434,
-     "end_time": "2025-08-26T14:37:33.573832",
+     "duration": 0.013198,
+     "end_time": "2025-08-26T16:27:59.703740",
      "exception": false,
-     "start_time": "2025-08-26T14:37:33.559398",
+     "start_time": "2025-08-26T16:27:59.690542",
      "status": "completed"
     },
     "tags": []
@@ -650,19 +650,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8aaf0f02",
+   "id": "ca22e25e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-26T14:37:33.579633Z",
-     "iopub.status.busy": "2025-08-26T14:37:33.579430Z",
-     "iopub.status.idle": "2025-08-26T16:24:32.108886Z",
-     "shell.execute_reply": "2025-08-26T16:24:32.107987Z"
+     "iopub.execute_input": "2025-08-26T16:27:59.708650Z",
+     "iopub.status.busy": "2025-08-26T16:27:59.708437Z",
+     "iopub.status.idle": "2025-08-26T18:20:38.986511Z",
+     "shell.execute_reply": "2025-08-26T18:20:38.985703Z"
     },
     "papermill": {
-     "duration": 6418.537714,
-     "end_time": "2025-08-26T16:24:32.113954",
+     "duration": 6759.284404,
+     "end_time": "2025-08-26T18:20:38.990076",
      "exception": false,
-     "start_time": "2025-08-26T14:37:33.576240",
+     "start_time": "2025-08-26T16:27:59.705672",
      "status": "completed"
     },
     "tags": []
@@ -673,8 +673,8 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/yahoojapan/geobleu.git\r\n",
-      "  Cloning https://github.com/yahoojapan/geobleu.git to /tmp/pip-req-build-niz35_h2\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/yahoojapan/geobleu.git /tmp/pip-req-build-niz35_h2\r\n",
+      "  Cloning https://github.com/yahoojapan/geobleu.git to /tmp/pip-req-build-kigiymbv\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/yahoojapan/geobleu.git /tmp/pip-req-build-kigiymbv\r\n",
       "  Resolved https://github.com/yahoojapan/geobleu.git to commit d9efb0fbc97d75b85f273a5db5f4da2215b0f715\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
       "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from geobleu==0.5) (1.26.4)\r\n",
@@ -692,38 +692,38 @@
       "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.11/dist-packages (from intel-openmp<2026,>=2024->mkl->numpy->geobleu==0.5) (2024.2.0)\r\n",
       "Building wheels for collected packages: geobleu\r\n",
       "  Building wheel for geobleu (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
-      "  Created wheel for geobleu: filename=geobleu-0.5-py3-none-any.whl size=5442 sha256=33374acc37a70bc35e55bff04766444d949349421351a5d340fa230571689b47\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-myywlb8f/wheels/97/c3/ec/b654420f0a3507ff7c5234dc42ee565578300e789e6705ec17\r\n",
+      "  Created wheel for geobleu: filename=geobleu-0.5-py3-none-any.whl size=5442 sha256=57bc1a0aab440ccd00353549960ecf11e7623075a7fdde24204c8fa44df2ddff\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-ums9go6i/wheels/97/c3/ec/b654420f0a3507ff7c5234dc42ee565578300e789e6705ec17\r\n",
       "Successfully built geobleu\r\n",
       "Installing collected packages: geobleu\r\n",
       "Successfully installed geobleu-0.5\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Using device: cuda | CUDA available: True\n",
-      "=== City: city_d ===\n",
-      "Train UIDs (sampled): 2449 ; Test UIDs (sampled): 2450\n",
+      "=== City: city_c ===\n",
+      "Train UIDs (sampled): 2493 ; Test UIDs (sampled): 2493\n",
       "Epoch 1/10\n",
-      "  Avg chunk loss: 30180.42853 over 30 chunks\n",
+      "  Avg chunk loss: 29152.38889 over 36 chunks\n",
       "Epoch 2/10\n",
-      "  Avg chunk loss: 23068.45856 over 30 chunks\n",
+      "  Avg chunk loss: 22868.06773 over 36 chunks\n",
       "Epoch 3/10\n",
-      "  Avg chunk loss: 22574.74936 over 30 chunks\n",
+      "  Avg chunk loss: 22748.42643 over 36 chunks\n",
       "Epoch 4/10\n",
-      "  Avg chunk loss: 23019.04033 over 30 chunks\n",
+      "  Avg chunk loss: 22734.38721 over 36 chunks\n",
       "Epoch 5/10\n",
-      "  Avg chunk loss: 22613.25417 over 30 chunks\n",
+      "  Avg chunk loss: 22893.77564 over 36 chunks\n",
       "Epoch 6/10\n",
-      "  Avg chunk loss: 22383.48788 over 30 chunks\n",
+      "  Avg chunk loss: 22932.83571 over 36 chunks\n",
       "Epoch 7/10\n",
-      "  Avg chunk loss: 22276.06556 over 30 chunks\n",
+      "  Avg chunk loss: 22753.79532 over 36 chunks\n",
       "Epoch 8/10\n",
-      "  Avg chunk loss: 22433.66855 over 30 chunks\n",
+      "  Avg chunk loss: 22810.17836 over 36 chunks\n",
       "Epoch 9/10\n",
-      "  Avg chunk loss: 22322.65594 over 30 chunks\n",
+      "  Avg chunk loss: 22838.40841 over 36 chunks\n",
       "Epoch 10/10\n",
-      "  Avg chunk loss: 22420.48963 over 30 chunks\n",
-      "  Saved final checkpoint: city_d_final.pt\n",
-      "Saved loss curve: city_d_loss_curve.png\n",
-      "Final GeoBLEU: 0.046120 | Final DTW: 27.0749 | UIDs evaluated: 2450\n"
+      "  Avg chunk loss: 22644.77702 over 36 chunks\n",
+      "  Saved final checkpoint: city_c_final.pt\n",
+      "Saved loss curve: city_c_loss_curve.png\n",
+      "Final GeoBLEU: 0.017396 | Final DTW: 31.3575 | UIDs evaluated: 2493\n"
      ]
     }
    ],
@@ -754,8 +754,8 @@
     "FILE_PATHS = {\n",
     "    # 'city_a': '/kaggle/input/humob-data/15313913/city_A_challengedata.csv',\n",
     "    # 'city_b': '/kaggle/input/humob-data/15313913/city_B_challengedata.csv',\n",
-    "    # 'city_c': '/kaggle/input/humob-data/15313913/city_C_challengedata.csv',\n",
-    "    'city_d': '/kaggle/input/humob-data/15313913/city_D_challengedata.csv',\n",
+    "    'city_c': '/kaggle/input/humob-data/15313913/city_C_challengedata.csv',\n",
+    "    # 'city_d': '/kaggle/input/humob-data/15313913/city_D_challengedata.csv',\n",
     "}\n",
     "\n",
     "TRAIN_DAYS = set(range(1, 61))\n",
@@ -1125,14 +1125,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6425.809427,
-   "end_time": "2025-08-26T16:24:34.754979",
+   "duration": 6765.594982,
+   "end_time": "2025-08-26T18:20:41.295348",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-08-26T14:37:28.945552",
+   "start_time": "2025-08-26T16:27:55.700366",
    "version": "2.6.0"
   }
  },
